<resources>
    <string name="app_name">CoffeeApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome!</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or">- - - - - or - - - - -</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already Have account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_your_email">Enter your email address to reset your password.</string>
    <string name="send">Send</string>
    <string name="verify_message">Check your email address, we have sent you the code at phtuonganh@gmail.com</string>
    <string name="notebook">Notebook</string>
    <string name="_0">(0)</string>
    <string name="all_notes">All Notes</string>
    <string name="start_writing">Start writing</string>
    <string name="choose_a_template">Choose a template</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="sign_out">Sign Out</string>
    <string name="switch_to_other_account">Switch to Other Account</string>
    <string name="my_account">My Account</string>
    <string name="input_username">Input Username</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="skip">Skip</string>
    <string name="Message1">Your very own online coffee marketplace, App caters to all your coffee needs and essentials </string>
    <string name="Message2">Remember everything important. A central place for your notes, ideas, lists and reminders.</string>
    <string name="Message3">Plan, record and manage projects on any device - even offline.</string>
    <string name="menu">Menu</string>
    <string name="preferences">Preferences</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="additions">Additions</string>
    <string name="macciato">Macciato</string>
    <string name="size">Size</string>
    <string name="sugar">Sugar</string>
    <string name="price">Price</string>
    <string name="total">Total</string>
    <string name="price_egp">Price EGP</string>
    <string name="dash">-</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="enter_username">Enter Username</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <string name="dollarSign">$</string>
    <string name="logout">Logout</string>
    <string name="change_languages">Change Languages</string>
    <string name="account">Account</string>
</resources>