<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.welcome.WelcomeFragmentSecond">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:layout_margin="20dp"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center_vertical"
        android:text="@string/welcome"
        android:textColor="?attr/text_color_primary"
        android:textSize="@dimen/_30ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/Message3"
        android:textColor="@color/textSecondary"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintWidth_max="wrap" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/shape_button_one"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/blue" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/shape_button_one"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue" />

</LinearLayout>