<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orderBackground">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_0.4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_horizontal_0.02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical_0.05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical_0.95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical_0.3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/gl_horizontal_0.4"
        app:layout_constraintEnd_toEndOf="@id/gl_vertical_0.95"
        app:layout_constraintStart_toStartOf="@id/gl_vertical_0.05"
        app:layout_constraintTop_toBottomOf="@id/gl_horizontal_0.02"
        app:srcCompat="@drawable/header" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="coffee Name"
        android:textSize="26sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@id/gl_vertical_0.05"
        app:layout_constraintTop_toBottomOf="@id/gl_horizontal_0.4" />

    <TextView
        android:id="@+id/itemDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  "
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/gl_vertical_0.95"
        app:layout_constraintStart_toEndOf="@id/gl_vertical_0.05"
        app:layout_constraintTop_toBottomOf="@id/itemName" />

    <TextView
        android:id="@+id/tv_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Size"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/gl_vertical_0.05"
        app:layout_constraintTop_toBottomOf="@id/itemDescription"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/imgSmallSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Small"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgMediumSize"
        app:layout_constraintStart_toEndOf="@id/gl_vertical_0.05"
        app:layout_constraintTop_toBottomOf="@id/tv_size"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/imgMediumSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Medium"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgLargeSize"
        app:layout_constraintStart_toEndOf="@id/imgSmallSize"
        app:layout_constraintTop_toBottomOf="@id/tv_size"
        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/imgLargeSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Large"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gl_vertical_0.95"
        app:layout_constraintStart_toEndOf="@id/imgMediumSize"
        app:layout_constraintTop_toBottomOf="@id/tv_size"
        app:layout_constraintVertical_bias="0.05" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:style="@style/add_button_style"
        android:text="@string/plus"
        android:textColor="@color/primaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/gl_vertical_0.05"
        app:layout_constraintTop_toBottomOf="@id/imgSmallSize"
        app:layout_constraintEnd_toStartOf="@id/amountText"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/amountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintStart_toEndOf="@id/addButton"
        app:layout_constraintEnd_toStartOf="@id/removeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgSmallSize"
        app:layout_constraintVertical_bias="0.2"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:style="@style/remove_button_style"
        android:text="@string/dash"
        android:textColor="@color/primaryDark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/gl_vertical_0.95"
        app:layout_constraintTop_toBottomOf="@id/imgSmallSize"
        app:layout_constraintStart_toEndOf="@id/amountText"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/priceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Price in EGP"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/gl_vertical_0.05"
        app:layout_constraintTop_toBottomOf="@id/addButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"/>

    <TextView
        android:id="@+id/totalPriceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/priceTitle"
        app:layout_constraintStart_toEndOf="@id/gl_vertical_0.05"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Add to Cart"
        android:textAllCaps="false"
        android:backgroundTint="@color/primaryDark"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/gl_vertical_0.95"
        app:layout_constraintStart_toEndOf="@id/gl_vertical_0.3"
        app:layout_constraintTop_toBottomOf="@id/priceTitle"/>


</androidx.constraintlayout.widget.ConstraintLayout>